--- a/ov/src/app/find-course/find-course.component.html
+++ b/ov/src/app/find-course/find-course.component.html
@@ -16,9 +16,9 @@
 
   <div class="row cardFull" *ngFor="let course of subCourses" >
     <div class="col">
-      <div class="card text-center">
+      <div class="card text-center" >
         <div class="card-header text-left">
-          {{course.editors}}
+          {{course.editors}} sadasdasdasd
         </div>
         <div class="card-body">
           <h5 class="card-title">{{course.title}}</h5>
