add edit course base1

--- a/ov/src/app/course/course.component.html
+++ b/ov/src/app/course/course.component.html
@@ -1,11 +1,11 @@
 <div class="container ">
-  <div class="row  ">
+  <div class="row">
     <div class="siteTitle  col-sm-12 col-md-6  col-lg-6 shadow">
       <div>My Courses</div>
     </div>
   </div>
   <div class="row cardFull" *ngFor="let course of subCourses">
-    <div class="col" *ngIf="course.id != eidtCourse else editCourse">
+    <div class="col mt-3" *ngIf="course.id != eidtCourse else editCourse">
       <div class="card text-center">
         <div class="card-header row ">
           <div class="text-left col-6">
@@ -27,15 +27,12 @@
 
 
   <ng-template #editCourse>
-
-    <div class="col form-group">
+    <div class="col mt-3 form-group">
       <form (ngSubmit)="onSubmit()" #courseForm="ngForm">
         <div class="card text-center">
           <div class="card-header row ">
             <div class="text-left col-6">
-
               <input type="text" class="form-control" id="author" placeholder="{{editAuthor}}" [(ngModel)]="model.editors" #editros="ngModel" name="editros">
-
             </div>
             <div class="text-right col-6">
               <div class="editMode">
@@ -44,10 +41,8 @@
             </div>
           </div>
           <div class="card-body">
-
             <input type="text" class="form-control" id="title" placeholder="{{editTitle}}"  [(ngModel)]="model.title"  #title="ngModel" name="title">
-
-            <div class="btn btn-success" (click)="save()">save</div>
+            <div class="btn btn-success mt-3" (click)="save()">save</div>
           </div>
         </div>
       </form>
