Add form edit-user

--- a/ov/src/app/edit-user/edit-user.component.html
+++ b/ov/src/app/edit-user/edit-user.component.html
@@ -8,32 +8,41 @@
         <img src="favicon.ico" class="img-thumbnail profilePicture">
       </div>
       <div class="col-8 ">
-        <form>
+        <form [formGroup]="myForm">
           <mat-form-field>
             <mat-label>Username</mat-label>
-            <input matInput placeholder="Username">
+            <input matInput placeholder="username" formControlName="username">     
+            <mat-error *ngIf="username.invalid  && username.touched">Incorrect Username</mat-error>       
           </mat-form-field>
+        
           <mat-form-field class="example-full-width">
             <mat-label>email</mat-label>
-            <input matInput type="email" placeholder="email">
+            <input matInput type="email" placeholder="email" formControlName="email">
+            <mat-error *ngIf="email.invalid  && email.touched">Incorrect Email</mat-error>
           </mat-form-field>
+         
           <mat-form-field class="example-full-width">
             <mat-label>New Password</mat-label>
-            <input matInput type="password" placeholder="New password">
+            <input matInput type="password" placeholder="New password" formControlName="newPassword1">
+            <mat-error *ngIf="newPassword1.invalid  && newPassword1.touched">Incorrect Password Format </mat-error>  
           </mat-form-field>
+        
           <mat-form-field class="example-full-width">
             <mat-label>New Password confirm</mat-label>
-            <input matInput type="password" placeholder="New password">
+            <input matInput type="password" placeholder="New password" formControlName="newPassword2" >
+            <mat-error *ngIf="newPassword2.invalid  && newPassword2.touched">The passwords aren't same</mat-error>   
           </mat-form-field>
+
           <mat-form-field class="example-full-width">
             <mat-label>Old Password</mat-label>
-            <input matInput type="password" placeholder="old password">
+            <input matInput type="password" placeholder="old password" formControlName="password">
+            <mat-error *ngIf="password.invalid  && password.touched">Incorrect Password</mat-error>  
           </mat-form-field>
         </form>
 
       </div>
       <div class="col-12 ">
-        <button type="button" class="btn float-right btn-primary m-2">Update</button>
+        <button type="button" class="btn float-right btn-primary m-2" (click)="onSubmit()" >Update</button>
       </div>
     </div>
   </div>
