--- a/ov/src/app/core/navbar/navbar.component.html
+++ b/ov/src/app/core/navbar/navbar.component.html
@@ -1,34 +1,23 @@
 <nav class="navbar navbar-expand-md navbar-dark " [ngClass]="{'open':isOpened}">
   <div class="container">
-    <a class="navbar-brand" routerLink="/home"><img class="nav-logo" src="assets/logo.png " ></a>
-    <button class="navbar-toggler"
-            type="button"
-            data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-
-            (click)="opener()"
-            (click)="classAdd()"
-
-    >
-   <span class="navbar-toggler-icon">
-
-     </span>
+    <a class="navbar-brand" routerLink="/home"><img class="nav-logo" src="assets/logo.png "></a>
+    <button class="navbar-toggler" type="button" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+      aria-expanded="false" aria-label="Toggle navigation" (click)="opener()" (click)="classAdd()">
+      <span class="navbar-toggler-icon">
+      </span>
     </button>
-    <!--  collapse-->
-    <div class=" navbar-collapse" [ngClass]="{'collapse':collapse}" id="navbarNavAltMarkup" >
-      <ul class="navbar-nav ml-auto  "  >
-        <li class="nav-item" >
-          <a class=" nav-link  " (click)="classRemover()"                     routerLinkActive="active" routerLink="/home"> HOME <span class="sr-only">(current)</span></a>   </li>
-        <li class="nav-item" > <a (click)="classRemover()" class=" nav-link " routerLinkActive="active" routerLink="/mycourses">MY COURSES</a></li>
-        <li class="nav-item" > <a  (click)="classRemover()"class=" nav-link " routerLinkActive="active" routerLink="/findCourse">FIND COURSES</a></li>
-        <li class="nav-item" >  <a (click)="classRemover()" class=" nav-link " routerLinkActive="active" routerLink="/editUser">PROFILE</a></li>
-        <li class="nav-item" >  <a (click)="classRemover()" class=" nav-link " routerLinkActive="active" routerLink="/login">LOGIN</a></li>
-        <li class="nav-item" >  <a (click)="classRemover()" class=" nav-link " routerLinkActive="active" routerLink="/registration">SIGN UP</a></li>
+    <div class=" navbar-collapse" [ngClass]="{'collapse':collapse}" id="navbarNavAltMarkup">
+      <ul class="navbar-nav ml-auto  ">
+        <ng-container *ngFor="let link of navLinks; index as i">
+          <li class="nav-item" *ngIf="i === 0 else list">
+            <a class=" nav-link  " (click)="classRemover()"  routerLinkActive="active" routerLink={{link.url}}> {{link.name}} <span class="sr-only">(current)</span></a> 
+          </li>
+          <ng-template #list>
+            <a class=" nav-link  " (click)="classRemover()" routerLinkActive="active" routerLink={{link.url}}>
+              {{link.name}} </a>
+          </ng-template>
+        </ng-container>
       </ul>
     </div>
   </div>
 </nav>
-
-
