--- a/ov/src/app/logIn/logIn.component.html
+++ b/ov/src/app/logIn/logIn.component.html
@@ -1,26 +1,28 @@
-<div class="container " [ngClass]="{'containerNext':!visible}" >
+<div class="container " [ngClass]="{'containerNext':!visible}">
   <div class="  col-sm-6 col-md-4 center shadow mt-2 mb-2 ">
     <h1 class="title">Login
     </h1>
     <hr>
+    <div class="row">
+      <div class="col-4 ">
+        <form [formGroup]="loginForm">
+          <mat-form-field>
+            <mat-label>Username</mat-label>
+            <input matInput placeholder="username" formControlName="username">
+            <mat-error *ngIf="username.invalid  && username.touched">Incorrect Username</mat-error>
+          </mat-form-field>
 
-      <form [formGroup]="loginForm">
-        <mat-form-field>
-          <mat-label>Username</mat-label>
-          <input matInput placeholder="username" formControlName="username">
-          <mat-error *ngIf="username.invalid  && username.touched">Incorrect Username</mat-error>       
-        </mat-form-field>
-
-        <mat-form-field class="example-full-width">
-          <mat-label>Old Password</mat-label>
-          <input matInput type="password" placeholder="password" formControlName="password">
-          <mat-error *ngIf="password.invalid  && password.touched">Incorrect Password</mat-error>  
-        </mat-form-field>
-      </form>
-
-    <button type="button" class="btn float-right btn-primary m-2" (click)="onSubmit()" >Login</button>
-    <button type="button"  class="btn btn-link"  (click)="goToReg()">Registration</button>
+          <mat-form-field class="example-full-width">
+            <mat-label>Old Password</mat-label>
+            <input matInput type="password" placeholder="password" formControlName="password">
+            <mat-error *ngIf="password.invalid  && password.touched">Incorrect Password</mat-error>
+          </mat-form-field>
+        </form>
+      </div>
+      <div class="col-12 ">
+        <button type="button" class="btn float-right btn-primary m-2" (click)="onSubmit()">Login</button>
+        <button type="button" class="btn btn-link" (click)="goToReg()">Registration</button>
+      </div>
+    </div>
   </div>
 </div>
-
-
