Paginator first version

--- a/ov/src/app/my-courses/my-courses.component.html
+++ b/ov/src/app/my-courses/my-courses.component.html
@@ -21,7 +21,7 @@
     </div>
 
   </div>
-  <mat-paginator [length]="1000" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"
+  <mat-paginator [length]="lengthPaginator" [pageSize]="8" 
     class="shadow col-lg-6  col-md-8 center">
   </mat-paginator>
 
