fix style on box comps

--- a/ov/src/app/registration/registration.component.html
+++ b/ov/src/app/registration/registration.component.html
@@ -1,5 +1,5 @@
 <div class="container " [ngClass]="{'containerNext':!visible}" >
-  <div class="  col-sm-6 col-md-4 center shadow mt-2 mb-2 ">
+  <div class="  col-sm-6 col-md-4 center shadow mt-2 mb-2 insideBox ">
     <h1 class="title">Registration</h1>
 
     <hr>
