--- a/ov/src/app/edit-user/edit-user.component.html
+++ b/ov/src/app/edit-user/edit-user.component.html
@@ -1,5 +1,5 @@
 <div class="container ">
-  <div class="  col-sm-6 col-md-4 center shadow mt-2 mb-2 ">
+  <div class="  col-sm-6 col-md-4 center shadow mt-2 mb-2 insideBox ">
     <h1 class="title">Edit profile
     </h1>
     <hr>
