--- a/ov/src/app/logIn/logIn.component.html
+++ b/ov/src/app/logIn/logIn.component.html
@@ -1,5 +1,5 @@
 <div class="container " [ngClass]="{'containerNext':!visible}">
-  <div class="  col-sm-6 col-md-4 center shadow mt-2 mb-2 ">
+  <div class="  col-sm-6 col-md-4 center shadow mt-2 mb-2 insideBox ">
     <h1 class="title">Login
     </h1>
     <hr>
@@ -11,7 +11,6 @@
             <input matInput placeholder="username" formControlName="username">
             <mat-error *ngIf="username.invalid  && username.touched">Incorrect Username</mat-error>
           </mat-form-field>
-
           <mat-form-field class="example-full-width">
             <mat-label>Old Password</mat-label>
             <input matInput type="password" placeholder="password" formControlName="password">
