--- a/ov/src/styles.scss
+++ b/ov/src/styles.scss
@@ -53,7 +53,13 @@ body {
     animation-duration: 1s  ;
   }
 }
-
+.insideBox {
+  background-color: #fff ;
+  
+  h1{
+    color: $colorPrimary;
+  }
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
